pushed new ht,l views

--- a/backend/templates/backend/fashion.html
+++ b/backend/templates/backend/fashion.html
@@ -1,11 +1,11 @@
 {% extends 'backend/base.html' %}
 
-{% block title %}Business News - NewsFeed{% endblock %}
+{% block title %}Tesla News - NewsFeed{% endblock %}
 
 {% block content %}
 <main class="main-content">
     <section class="featured-news">
-      <h2>Top News BBC</h2>
+      <h2>Apple</h2>
       <div class="featured-card">
         <img src="{{ article.urlToImage }}" alt="Featured News">
         <div class="featured-content">
