--- a/backend/templates/backend/trending.html
+++ b/backend/templates/backend/trending.html
@@ -5,7 +5,7 @@
 {% block content %}
 <main class="main-content">
     <section class="featured-news">
-      <h2>Top News BBC</h2>
+      <h2>Trending in US</h2>
       <div class="featured-card">
         <img src="{{ article.urlToImage }}" alt="Featured News">
         <div class="featured-content">
